Bug 317034 - color can still appear after links with "Allow Coloured Text in IRC Messages" disabled
Summary: color can still appear after links with "Allow Coloured Text in IRC Messages"...
Status: RESOLVED FIXED
Alias: None
Product: konversation
Classification: Applications
Component: ircview (other bugs)
Version First Reported In: 1.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: argonel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-03-19 17:02 UTC by ais523
Modified: 2013-03-19 20:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ais523 2013-03-19 17:02:05 UTC
I have the "Allow Coloured Text in IRC Messages" option (under "Configure Konversation... | Colours" disabled). (In case it's relevant, some of my other color settings include black background, messages from other people in white, and links in white.) Normally this causes color codes in other people's messages to be disregarded, as intended. Sometimes, however, messages appear partly colored; I don't know exactly what the trigger is, although it seems to involve the interaction of color codes and links, but I have a test case to reproduce it.

Reproducible: Always

Steps to Reproduce:
1. Change the options under "Configure Konversation... | Colours" to set black background, messages from other people in white, links in white, and "Allow Coloured Text in IRC Messages" disabled.
2. Join a channel which allows colours to be sent (on most servers, mode -c).
3. Have another person on that channel (using a client other than Konversation) send a message to the channel whose content is "http://example.^C7com test" (without the quotes, and where ^C is a single octet with a value of 0x03, rather than two characters).
Actual Results:  
The part of the screen that shows messages to the channel prints the nick inside angle brackets, "http://example.com" in white, and "test" in orange.

Expected Results:  
The expected results are the same as the actual results, except that "test" should be in white.

The message that triggers the bug cannot be sent using Konversation; Konversation normally uses %C as syntax for color codes (translating to \x03 in the communication to the server), but does not interpret it as syntax for color codes in links. However, using a different IRC client, or sending bytes to the server directly, can be used to reproduce the bug.
Comment 1 Bernd Buschinski 2013-03-19 20:19:44 UTC
Git commit f9e6ff25b842ee2427d28633f4237d2e3db5145b by Bernd Buschinski.
Committed on 19/03/2013 at 21:10.
Pushed by buschinski into branch '1.4'.

Fix showing colors if url contains irc color markups (/0003)
and "Allow Coloured Text in IRC Messages" is disabled.

M  +2    -0    ChangeLog
M  +14   -2    src/viewer/ircview.cpp
M  +1    -1    src/viewer/ircview.h

http://commits.kde.org/konversation/f9e6ff25b842ee2427d28633f4237d2e3db5145b