Fix showing colors if url contains irc color markups (/0003) and "Allow Coloured Text in IRC Messages" is disabled.

BUG:317034